[gd_scene load_steps=38 format=3 uid="uid://65fn3keytdew"]

[ext_resource type="PackedScene" uid="uid://cyti38f0lagf2" path="res://Scenes/Prefabs/LevelFinishDoor.tscn" id="1_oqkjg"]
[ext_resource type="PackedScene" uid="uid://bjb3dx2x4bocm" path="res://Scenes/Levels/Level_02.tscn" id="2_0ac5u"]
[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Scenes/Prefabs/player.tscn" id="2_pay8t"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="4_vgfkr"]
[ext_resource type="Script" path="res://Scripts/AscendZone.gd" id="5_5o43u"]
[ext_resource type="Texture2D" uid="uid://cam4o2pf6h0ht" path="res://Assets/Spritesheet/ENV_Tiles-01.png" id="5_6wk0m"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="5_wqbaa"]
[ext_resource type="Script" path="res://Scripts/GameUI.gd" id="6_66mfc"]
[ext_resource type="PackedScene" uid="uid://ckufvpwn1oko2" path="res://Scenes/Prefabs/Sea_Urchin.tscn" id="6_qfjix"]
[ext_resource type="PackedScene" uid="uid://clfi3onegcb4m" path="res://Scenes/Prefabs/Hooks.tscn" id="6_tfmln"]
[ext_resource type="Texture2D" uid="uid://djtbyhghowwxs" path="res://Assets/Spritesheet/BG_sea_tiles.png" id="6_vvjdl"]
[ext_resource type="Texture2D" uid="uid://kp12akkak67x" path="res://Assets/Spritesheet/BG_sky_tiles.png" id="7_nvof1"]
[ext_resource type="FontFile" uid="uid://qgc4vi5osk7v" path="res://Assets/Fonts/Star Choco.ttf" id="8_gwcy2"]
[ext_resource type="PackedScene" uid="uid://bts5y15qgj75i" path="res://Scenes/Prefabs/AscendZoneParticles.tscn" id="12_82myr"]
[ext_resource type="PackedScene" uid="uid://b8fx2vhne5na6" path="res://Scenes/Prefabs/sky_area.tscn" id="12_nhrkc"]
[ext_resource type="Texture2D" uid="uid://c23jf4ytibl3h" path="res://Assets/Spritesheet/Gate-placeholder.png" id="13_680v1"]
[ext_resource type="PackedScene" uid="uid://cwybijrtyxaja" path="res://Scenes/Prefabs/bubble_particles.tscn" id="13_hw8ol"]
[ext_resource type="Texture2D" uid="uid://bmkpdmdhhgepa" path="res://Assets/Spritesheet/octoGhost_UI.png" id="13_qnis4"]
[ext_resource type="Texture2D" uid="uid://0ajkdfycyrui" path="res://Assets/Spritesheet/bubble_01.png" id="14_du53r"]
[ext_resource type="Texture2D" uid="uid://bkvd1kbrhk45o" path="res://Assets/Spritesheet/bubble_03.png" id="15_62d5k"]
[ext_resource type="PackedScene" uid="uid://cotegi663w7r7" path="res://Scenes/Prefabs/huggable_sprite.tscn" id="15_dlo3l"]
[ext_resource type="Script" path="res://Scripts/GateUnlock.gd" id="18_eowax"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ktpb"]
texture = ExtResource("6_vvjdl")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7em8i"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_6ktpb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ntns"]
texture = ExtResource("7_nvof1")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_q7vy8"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_4ntns")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gs0qk"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 16, -32, 16)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 0, -32, 0)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ywwrl"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gs0qk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rndpx"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_2fcbi"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rndpx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ohbe"]
texture = ExtResource("5_6wk0m")
texture_region_size = Vector2i(64, 64)
3:0/0 = 0
2:0/0 = 0
1:0/0 = 0
0:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_kjb3j"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_5ohbe")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y38ca"]
size = Vector2(254.266, 1097.2)

[sub_resource type="Animation" id="Animation_pf05f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../RigidBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RigidBody2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8811t"]
resource_name = "Unlock_Animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 262)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RigidBody2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../RigidBody2D/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3o44y"]
_data = {
"RESET": SubResource("Animation_pf05f"),
"Unlock_Animation": SubResource("Animation_8811t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usdkh"]
size = Vector2(106, 257)

[node name="Level_01" type="Node2D"]

[node name="LevelFinishDoor" parent="." instance=ExtResource("1_oqkjg")]
visible = false
z_index = 1
position = Vector2(1307, 524)
next_scene = ExtResource("2_0ac5u")

[node name="Player" parent="." groups=["Enemy"] instance=ExtResource("2_pay8t")]
z_index = 1
position = Vector2(150, 318)
gravity = -1.0

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
editor_draw_drag_margin = true

[node name="Level" type="Node2D" parent="."]

[node name="Underwater" type="TileMap" parent="Level"]
tile_set = SubResource("TileSet_7em8i")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, 6, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 131072, 0, 2, 131073, 0, 2, 131074, 0, 2, 131075, 0, 2, 131076, 0, 2, 131077, 0, 2, 131078, 0, 2)

[node name="Sky_Surface" type="TileMap" parent="Level"]
tile_set = SubResource("TileSet_q7vy8")
cell_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(-131072, 196608, 1, -131071, 196608, 1, -131070, 196608, 1, -131069, 196608, 1, -131068, 196608, 1, -131067, 196608, 1, -131066, 196608, 1, -196608, 196608, 0, -196607, 196608, 0, -196606, 196608, 0, -196605, 196608, 0, -196604, 196608, 0, -196603, 196608, 0, -196602, 196608, 0)

[node name="Ground" type="TileMap" parent="Level" groups=["Ground"]]
tile_set = SubResource("TileSet_ywwrl")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 131072, 1, 458753, 131072, 1, 458754, 131072, 1, 458755, 131072, 1, 458756, 131072, 1, 524288, 196608, 1, 589824, 196608, 1, 589825, 196608, 1, 589826, 196608, 1, 589827, 196608, 1, 589828, 196608, 1, 655364, 196608, 1, 655363, 196608, 1, 655362, 196608, 1, 655361, 196608, 1, 655360, 196608, 1, 524289, 196608, 1, 524290, 196608, 1, 458765, 131072, 1, 524301, 196608, 1, 589837, 196608, 1, 655373, 196608, 1, 458766, 196608, 1, 524302, 196608, 1, 589838, 196608, 1, 655374, 196608, 1, 458767, 196608, 1, 524303, 196608, 1, 589839, 196608, 1, 655375, 196608, 1, 458768, 196608, 1, 524304, 196608, 1, 589840, 196608, 1, 655376, 196608, 1, 458769, 196608, 1, 524305, 196608, 1, 589841, 196608, 1, 655377, 196608, 1, 458770, 196608, 1, 524306, 196608, 1, 589842, 196608, 1, 655378, 196608, 1, 458771, 196608, 1, 524307, 196608, 1, 589843, 196608, 1, 655379, 196608, 1, 458772, 196608, 1, 524308, 196608, 1, 589844, 196608, 1, 655380, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 655370, 196608, 1, 655371, 196608, 1, 655372, 196608, 1, 655365, 196608, 1, 655366, 196608, 1, 655367, 196608, 1, 655368, 196608, 1, 655369, 196608, 1, 458757, 131072, 2, 458760, 131072, 2, 458761, 131072, 2, 458764, 131072, 2, 720895, 196608, 1, 655359, 196608, 1, 589823, 196608, 1, 524287, 196608, 1, 458751, 196608, 1, 393215, 196608, 1, 327679, 196608, 1, 262143, 196608, 1, 196607, 196608, 1, 131071, 196608, 1, 65535, 131072, 1, 524291, 196608, 1, 524292, 196608, 1, 393230, 131072, 1, 393231, 131072, 1, 393232, 196608, 1, 393233, 196608, 1, 393234, 196608, 1, 393235, 196608, 1, 393236, 196608, 1, 393237, 196608, 1, 327696, 196608, 1, 327697, 196608, 1, 327698, 196608, 1, 327699, 196608, 1, 327700, 196608, 1, 327701, 196608, 1, 262160, 131072, 1, 262161, 131072, 1, 262162, 196608, 1, 262163, 196608, 1, 262164, 196608, 1, 262165, 196608, 1, 196626, 131072, 1, 196627, 131072, 1, 196628, 131072, 1, 196629, 131072, 1, 393238, 131072, 1, 393239, 131072, 1, 393240, 131072, 1, 458776, 196608, 1, 458777, 131072, 1, 524313, 196608, 1, 589849, 196608, 1, 589848, 196608, 1, 655384, 196608, 1, 655383, 196608, 1, 655385, 196608, 1, 524312, 196608, 1, 589847, 196608, 1, 524311, 196608, 1, 458775, 196608, 1, 458774, 196608, 1, 524310, 196608, 1, 589846, 196608, 1, 655382, 196608, 1, 65538, 786432, 4, 65537, 786432, 4, 262144, 786432, 4, 196608, 786432, 4, 196609, 786432, 4, 196610, 786432, 4, 131074, 786432, 4, 131075, 786432, 4, 131073, 786432, 4, 131072, 786432, 4, 65536, 786432, 4, 65539, 786432, 4, 65540, 786432, 4, 65541, 786432, 4, 0, 786432, 4, -65536, 786432, 4, -65535, 786432, 4, -65534, 786432, 4, 2, 786432, 4, 1, 786432, 4, 65534, 786432, 4, 65533, 786432, 4, 65532, 786432, 4, 3, 786432, 4, 4, 786432, 4, 5, 786432, 4, 6, 786432, 4, 7, 786432, 4, 8, 786432, 4, 65544, 786432, 4, 65543, 786432, 4, 131078, 786432, 4, 131077, 786432, 4, 131076, 786432, 4, 196611, 786432, 4, 131079, 786432, 4, 196615, 786432, 4)

[node name="Traps" type="TileMap" parent="Level" groups=["Traps"]]
tile_set = SubResource("TileSet_2fcbi")
format = 2
layer_0/tile_data = PackedInt32Array(589836, 0, 5, 589835, 0, 5, 589834, 0, 5, 589833, 0, 5, 589832, 0, 5, 589831, 0, 5, 589830, 0, 5, 589829, 0, 5)

[node name="Environment" type="TileMap" parent="Level"]
tile_set = SubResource("TileSet_kjb3j")
cell_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(393229, 1, 0, 131090, 65537, 0, 131093, 196609, 0)

[node name="SeaUrchin" parent="Level" instance=ExtResource("6_qfjix")]
position = Vector2(976, 341)

[node name="Hook" parent="Level" instance=ExtResource("6_tfmln")]
position = Vector2(800, -153)

[node name="SpawnPoint" type="Marker2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(174, 383)

[node name="Ascend Zone" type="Area2D" parent="Level"]
position = Vector2(999, -350.3)
scale = Vector2(21.4775, 0.109369)
monitorable = false
script = ExtResource("5_5o43u")

[node name="Sprite2D" type="Sprite2D" parent="Level/Ascend Zone"]
visible = false
position = Vector2(0, 102.202)
scale = Vector2(1, 1.80158)
texture = ExtResource("13_680v1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Ascend Zone"]
position = Vector2(54.4989, -216.697)
shape = SubResource("RectangleShape2D_y38ca")

[node name="AscendZoneParticles" parent="Level/Ascend Zone/CollisionShape2D" instance=ExtResource("12_82myr")]
amount = 500
lifetime = 4.0

[node name="SkyArea" parent="Level" instance=ExtResource("12_nhrkc")]
position = Vector2(-384, -378)

[node name="TutorialText" type="Node2D" parent="."]

[node name="Movement" type="Label" parent="TutorialText"]
offset_left = 266.0
offset_top = 284.0
offset_right = 598.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "A / LEFT  & D / RIGHT To Move
W / UP & S / DOWN To Set Direction
Spacebar To Thrust"

[node name="SetNextScene" type="Label" parent="TutorialText"]
visible = false
offset_left = 808.0
offset_top = 256.0
offset_right = 1239.0
offset_bottom = 382.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "Level Finish
Set the next scene
from \"LevelFinishDoor\" Area"

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("4_vgfkr")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_66mfc")
metadata/_edit_lock_ = true

[node name="Score" type="Control" parent="UserInterface/GameUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreTexture" type="TextureRect" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -6.0
offset_right = 1900.0
offset_bottom = 1903.0
scale = Vector2(0.08, 0.08)
texture = ExtResource("13_qnis4")

[node name="ScoreLabel" type="Label" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 42.0
offset_right = 148.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "x 3"

[node name="BubbleParticles" parent="." instance=ExtResource("13_hw8ol")]
position = Vector2(0, 1000)
amount = 20
lifetime = 20.0
texture = ExtResource("14_du53r")
scale_amount_min = 0.1
scale_amount_max = 0.1

[node name="BubbleParticles2" parent="." instance=ExtResource("13_hw8ol")]
position = Vector2(0, 900)
amount = 20
lifetime = 20.0
texture = ExtResource("15_62d5k")
scale_amount_min = 0.1
scale_amount_max = 0.1

[node name="huggable_sprite" parent="." instance=ExtResource("15_dlo3l")]
position = Vector2(313, 135)

[node name="Gate" type="Node2D" parent="."]
position = Vector2(1270, 57)
script = ExtResource("18_eowax")

[node name="Gate Sprite" type="Sprite2D" parent="Gate"]
texture = ExtResource("13_680v1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gate"]
root_node = NodePath("../Gate Sprite")
libraries = {
"": SubResource("AnimationLibrary_3o44y")
}

[node name="NextSpawnPoint" type="Marker2D" parent="Gate"]
position = Vector2(121, 7)

[node name="RigidBody2D" type="RigidBody2D" parent="Gate"]
mass = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate/RigidBody2D"]
shape = SubResource("RectangleShape2D_usdkh")

[connection signal="area_entered" from="Level/Ascend Zone" to="Level/Ascend Zone" method="_on_area_entered"]
[connection signal="savedFriend" from="GameManager" to="Gate" method="_on_game_manager_saved_friend"]
